force-app/main/default/objects/Activity/fields/Answer_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Answer_Time_Seconds__c</fullName>
    <label>Answer Time (sec)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>