force-app/main/default/objects/Activity/fields/Call_QA_Score__c.field-meta.xml
<CustomField>
    <fullName>Call_QA_Score__c</fullName>
    <label>Call QA Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>