force-app/main/default/objects/Activity/fields/Call_SID__c.field-meta.xml
<CustomField>
    <fullName>Call_SID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Call SID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>