force-app/main/default/objects/Activity/fields/Compliance_Flagged_Quote__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Flagged_Quote__c</fullName>
    <label>Compliance Flagged Quote</label>
    <type>TextArea</type>
</CustomField>