force-app/main/default/objects/Activity/fields/Compliance_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Issue_Type__c</fullName>
    <label>Compliance Issue Type</label>
    <type>TextArea</type>
</CustomField>