force-app/main/default/objects/Activity/fields/Compliance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reason__c</fullName>
    <label>Compliance Reason</label>
    <type>TextArea</type>
</CustomField>