force-app/main/default/objects/Activity/fields/Compliance_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Risk_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Risk Flag</label>
    <type>Checkbox</type>
</CustomField>