force-app/main/default/objects/Activity/fields/Compliance_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Risk_Score__c</fullName>
    <label>Compliance Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>