force-app/main/default/objects/Activity/fields/Incoming_Time__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Time__c</fullName>
    <label>Incoming Time</label>
    <type>DateTime</type>
</CustomField>