force-app/main/default/objects/Activity/fields/Recording_S3_Key__c.field-meta.xml
<CustomField>
    <fullName>Recording_S3_Key__c</fullName>
    <description>S3 object key for the call recording MP3. Played back via on-demand presigned GET URL — no public URL stored.</description>
    <inlineHelpText>Internal S3 key for the call recording. Not a clickable link.</inlineHelpText>
    <label>Recording S3 Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>