force-app/main/default/objects/Activity/fields/Recording_SID__c.field-meta.xml
<CustomField>
    <fullName>Recording_SID__c</fullName>
    <label>Recording SID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>