force-app/main/default/objects/Activity/fields/Transcript_SID__c.field-meta.xml
<CustomField>
    <fullName>Transcript_SID__c</fullName>
    <label>Transcript SID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>